// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EthereumSig > should create cancelProposal envelope 1`] = `
{
  "data": {
    "proposal": "0x56b857b02d573b0ba747333b57cb3dd11df57cc0d1bcc41c3c990466b477c5e8",
    "space": "test.eth",
  },
  "signatureData": {
    "address": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
    "domain": {
      "name": "snapshot",
      "version": "0.1.4",
    },
    "message": {
      "from": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
      "proposal": "0x56b857b02d573b0ba747333b57cb3dd11df57cc0d1bcc41c3c990466b477c5e8",
      "space": "test.eth",
      "timestamp": 1705795200,
    },
    "signature": "0xb0d9374069983281b54ca07c4822d7cb1ac60c45d852dd4216575a87375774f44bc7422668bf000df1f4e0ae60b2221afdc92948fb936341560652ba588935251c",
    "types": {
      "CancelProposal": [
        {
          "name": "from",
          "type": "string",
        },
        {
          "name": "space",
          "type": "string",
        },
        {
          "name": "timestamp",
          "type": "uint64",
        },
        {
          "name": "proposal",
          "type": "string",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig > should create propose envelope 1`] = `
{
  "data": {
    "app": "snapshot-v2",
    "body": "Dummy body",
    "choices": [
      "For",
      "Against",
      "Abstain",
    ],
    "discussion": "https://snapshot.org",
    "end": 1705798800,
    "labels": [
      "1234e",
    ],
    "plugins": "{}",
    "privacy": "",
    "snapshot": 19283932,
    "space": "wan-test.eth",
    "start": 1705795200,
    "title": "Creation test",
    "type": "basic",
  },
  "signatureData": {
    "address": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
    "domain": {
      "name": "snapshot",
      "version": "0.1.4",
    },
    "message": {
      "app": "snapshot-v2",
      "body": "Dummy body",
      "choices": [
        "For",
        "Against",
        "Abstain",
      ],
      "discussion": "https://snapshot.org",
      "end": 1705798800,
      "from": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
      "labels": [
        "1234e",
      ],
      "plugins": "{}",
      "privacy": "",
      "snapshot": 19283932,
      "space": "wan-test.eth",
      "start": 1705795200,
      "timestamp": 1705795200,
      "title": "Creation test",
      "type": "basic",
    },
    "signature": "0x5ba9d0555e3d82bdcf559a041d2807fb7004db902f2a18f68ac54e03eedc3bc9350940cf50d558fe0e873665efcb52bacbb4d9b3a5a01f5ae7cf164af205143d1c",
    "types": {
      "Proposal": [
        {
          "name": "from",
          "type": "string",
        },
        {
          "name": "space",
          "type": "string",
        },
        {
          "name": "timestamp",
          "type": "uint64",
        },
        {
          "name": "type",
          "type": "string",
        },
        {
          "name": "title",
          "type": "string",
        },
        {
          "name": "body",
          "type": "string",
        },
        {
          "name": "discussion",
          "type": "string",
        },
        {
          "name": "choices",
          "type": "string[]",
        },
        {
          "name": "labels",
          "type": "string[]",
        },
        {
          "name": "start",
          "type": "uint64",
        },
        {
          "name": "end",
          "type": "uint64",
        },
        {
          "name": "snapshot",
          "type": "uint64",
        },
        {
          "name": "plugins",
          "type": "string",
        },
        {
          "name": "privacy",
          "type": "string",
        },
        {
          "name": "app",
          "type": "string",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig > should create propose envelope with shutter 1`] = `
{
  "data": {
    "app": "snapshot-v2",
    "body": "Dummy body",
    "choices": [
      "For",
      "Against",
      "Abstain",
    ],
    "discussion": "https://snapshot.org",
    "end": 1705798800,
    "labels": [
      "1234e",
    ],
    "plugins": "{}",
    "privacy": "shutter",
    "snapshot": 19283932,
    "space": "wan-test.eth",
    "start": 1705795200,
    "title": "Creation test",
    "type": "basic",
  },
  "signatureData": {
    "address": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
    "domain": {
      "name": "snapshot",
      "version": "0.1.4",
    },
    "message": {
      "app": "snapshot-v2",
      "body": "Dummy body",
      "choices": [
        "For",
        "Against",
        "Abstain",
      ],
      "discussion": "https://snapshot.org",
      "end": 1705798800,
      "from": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
      "labels": [
        "1234e",
      ],
      "plugins": "{}",
      "privacy": "shutter",
      "snapshot": 19283932,
      "space": "wan-test.eth",
      "start": 1705795200,
      "timestamp": 1705795200,
      "title": "Creation test",
      "type": "basic",
    },
    "signature": "0xf9d24c7574aeff0a160824a5d5bcc777890cdbe1eb91e048bdb44370b44facbd0c21bd6d4894e37b2561a1576f3f2f3a0050a84546557f53863761133d59582e1b",
    "types": {
      "Proposal": [
        {
          "name": "from",
          "type": "string",
        },
        {
          "name": "space",
          "type": "string",
        },
        {
          "name": "timestamp",
          "type": "uint64",
        },
        {
          "name": "type",
          "type": "string",
        },
        {
          "name": "title",
          "type": "string",
        },
        {
          "name": "body",
          "type": "string",
        },
        {
          "name": "discussion",
          "type": "string",
        },
        {
          "name": "choices",
          "type": "string[]",
        },
        {
          "name": "labels",
          "type": "string[]",
        },
        {
          "name": "start",
          "type": "uint64",
        },
        {
          "name": "end",
          "type": "uint64",
        },
        {
          "name": "snapshot",
          "type": "uint64",
        },
        {
          "name": "plugins",
          "type": "string",
        },
        {
          "name": "privacy",
          "type": "string",
        },
        {
          "name": "app",
          "type": "string",
        },
      ],
    },
  },
}
`;

exports[`EthereumSig > should create vote envelope 1`] = `
{
  "data": {
    "app": "snapshot-v2",
    "authenticator": "",
    "choice": 1,
    "from": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
    "metadataUri": "",
    "privacy": "none",
    "proposal": "0xcc47146e5e0ac781e8976405a8da4468f2a0c4cdf0c7659353d728fafe46f801",
    "space": "wan-test.eth",
    "strategies": [],
    "type": "basic",
  },
  "signatureData": {
    "address": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
    "domain": {
      "name": "snapshot",
      "version": "0.1.4",
    },
    "message": {
      "app": "snapshot-v2",
      "choice": 1,
      "from": "0xf1f09AdC06aAB740AA16004D62Dbd89484d3Be90",
      "metadata": "",
      "proposal": "0xcc47146e5e0ac781e8976405a8da4468f2a0c4cdf0c7659353d728fafe46f801",
      "reason": "",
      "space": "wan-test.eth",
      "timestamp": 1705795200,
    },
    "signature": "0x8ebb390031f1c0b1ca907b8d3d3a7058a7bc0054e93f49d1ab33b853c065f54624a448b6610936f6b47cc44e833a7e969140c48cb18358c035df5dad9b19925b1c",
    "types": {
      "Vote": [
        {
          "name": "from",
          "type": "string",
        },
        {
          "name": "space",
          "type": "string",
        },
        {
          "name": "timestamp",
          "type": "uint64",
        },
        {
          "name": "proposal",
          "type": "string",
        },
        {
          "name": "choice",
          "type": "uint32",
        },
        {
          "name": "reason",
          "type": "string",
        },
        {
          "name": "app",
          "type": "string",
        },
        {
          "name": "metadata",
          "type": "string",
        },
      ],
    },
  },
}
`;
